--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<p>
 			&hearts; &hearts; &hearts; &hearts;
 		</p>
-		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/"><img src="w3c.png" width="165" alt="HTML5 Validator"></a>
-		<a href = "http://jigsaw.w3.org/css-validator/validator?uri=https://vivpeng.github.io/home/"><img src= "css.png" width="165" alt="CSS Validator"></a>
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/index.html"><img src="w3c.png" width="100" alt="HTML5 Validator"></a>
+		<a href = "http://jigsaw.w3.org/css-validator/validator?uri=https://vivpeng.github.io/home/index html"><img src= "css.png" width="100" alt="CSS Validator"></a>
 	</body>
 </html>
