--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			&hearts; &hearts; &hearts; &hearts;
 		</p>
 		
-		<a href="http://validator.w3.org/check?uri=https:vivpeng.github.io/home/">
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/">
 			<img src="w3c.png" width="100" alt="HTML5 Validator">
 		</a>
-		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https:vivpeng.github.io/home/">
+		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vivpeng.github.io/home/">
 			<img src="css.png" width="100" alt="CSS Validator">
 		</a>
 	</body>
