--- a/cookietips.html
+++ b/cookietips.html
@@ -26,5 +26,12 @@
 
 		<h2>Don&rsquo;t Overmix</h2>
 		<p>Mixing causes the result to have a chewy texture&comma; which is something that we don’t want in cakes and muffins. When a recipe says so&comma; make sure to not overmix and just go until it is uniform.</p>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/cookietips.html">
+			<img src="w3c.png" width="100" alt="HTML5 Validator">
+		</a>
+		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vivpeng.github.io/home/cookietips.css">
+			<img src="css.png" width="100" alt="CSS Validator">
+		</a>
 	</body>
 </html>
