--- a/cookietips.html
+++ b/cookietips.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<meta charste="UTF-8">
+		<meta charset="UTF-8">
 		<title>the greatest cookie website: tips</title>
 		<link rel="stylesheet" type="text/css" href="cookietips.css"/>
 	</head>
