--- a/cookierecipes.html
+++ b/cookierecipes.html
@@ -78,5 +78,12 @@
 		<p id="credits">
 			photo credits: 1. donna hay. vanilla snap bisuit. photo retrieved 2022-02-16 from https://www.donnahay.com.au/recipes/for-the-kids/lunchboxes/vanilla-snap-biscuits 2. lord bydron&rsquo;s kitchen. spiced chocolate shortbread buttons. photo retrieved 2022-02-16 from https://www.lordbyronskitchen.com/spiced-chocolate-shortbread-buttons/ 3. taste of home. chewy almond cookies. photo retrieved 2022-02-16 from https://www.tasteofhome.com/recipes/chewy-almond-cookies/ 4. epicurious. 3-ingredient peanut butter cookies. photo retrieved 2022-02-17 from https://www.epicurious.com/recipes/food/views/3-ingredient-peanut-butter-cookies 5. bellyfull. sugar cookies. photo retrieved 2022-02-17 from https://bellyfull.net/easy-sugar-cookie-recipe/ 6. wellplated. healthy oatmeal cookies. photo retrieved 2022-02-18 from https://www.wellplated.com/healthy-oatmeal-cookies/ 7. cookieandkate. pumpkin cookies. photo retrieved 2022-02-18 from https://cookieandkate.com/pumpkin-cookie-recipe/ 8. sweetliza. pinwheel cookies. photo retrieved 2022-02-18 from https://www.sweetliza.com/healthy-pinwheel-cookies/
 		</p>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/cookierecipes.html">
+			<img src="w3c.png" width="100" alt="HTML5 Validator">
+		</a>
+		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vivpeng.github.io/home/cookierecipes.css">
+			<img src="css.png" width="100" alt="CSS Validator">
+		</a>
 	</body>
 </html>
