--- a/cookierecipes/vanillasnaps.html
+++ b/cookierecipes/vanillasnaps.html
@@ -70,5 +70,12 @@
 			<li>Cut dough into 1/4 inch (5 mm) thick slices. Transfer to a cookie sheet.
 			<li>Bake for 8-10 minutes.</li>
 		</ol>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/vanillasnaps.html">
+			<img src="w3c.png" width="100" alt="HTML5 Validator">
+		</a>
+		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://vivpeng.github.io/home/overallcookierecipes.css">
+			<img src="css.png" width="100" alt="CSS Validator">
+		</a>
 	</body>
 </html>
