--- a/cookierecipes.html
+++ b/cookierecipes.html
@@ -28,49 +28,49 @@
 		<h2 id="readytobake">Ready-to-Bake Cookies</h2>
 		<p>These cookie doughs are prepared ahead of time and can be placed in your fridge for quite some time until you&rsquo;d like to bake them. Only a few minutes and you&rsquo;ve got yourself a batch of cookies.</p>
 		
-		<img src="cookieimages/vanillasnaps.png" alt="photo of vanilla snaps cookies" height="150px">
+		<img src="cookieimages/vanillasnaps.png" alt="photo of vanilla snaps cookies" height="150">
 		<p><a href="cookierecipes/vanillasnaps.html">Vanilla Snaps</a>: Your everyday simple cookie -- a great recipe for beginners.</p>
 		
-		<img src="cookieimages/cocoabuttons.png" alt="photo of cocoa buttons cookies" height="150px">
+		<img src="cookieimages/cocoabuttons.png" alt="photo of cocoa buttons cookies" height="150">
 		<p><a href="cookierecipes/cocoabuttons.html">Cocoa Buttons</a>: Sweet and cute cookie with a coffee taste.</p>
 		
-		<img src="cookieimages/mixednut.jpg" alt="photo of mixed-nut cookies" height="150px">
+		<img src="cookieimages/mixednut.jpg" alt="photo of mixed-nut cookies" height="150">
 		<p><a href="cookierecipes/mixednut.html">Mixed-nut Cookies</a>: Crunchy and...nutty? *nut allergies</p>
 		
 		<h2 id="easyandquick">Easy and Quick Cookies</h2>
 		<p>These cookies are great if you are trying to whip up something quickly. They don't require many hard to come across ingredients or much time either. Here are some recommended recipes you need to try. They are from Epicurious and BellyFull; links lead to their website.</p>
 		
-		<img src="cookieimages/peanutbutter.png" alt="photo of peanut butter cookies" height="150px">
+		<img src="cookieimages/peanutbutter.png" alt="photo of peanut butter cookies" height="150">
 		<p><a href="https://www.epicurious.com/recipes/food/views/3-ingredient-peanut-butter-cookies">Epicurious: 3-Ingredient Peanut Butter Cookies</a></p>
 		
-		<img src="cookieimages/sugar.png" alt="photo of sugar cookies" height="150px">
+		<img src="cookieimages/sugar.png" alt="photo of sugar cookies" height="150">
 		<p><a href="https://bellyfull.net/easy-sugar-cookie-recipe/">Bellyfull: 3-Ingredient Sugar Cookies</a></p>
 
 		<h2 id="popularandloved">Popular and Loved Cookies</h2>
 		<p>Some of the most well-known and widely enjoyed cookies. The macarons recipe is from Tastyco.</p>
 		
-		<img src="cookieimages/chocolatechip.png" alt="photo of chocolate chip cookes" height="150px">
+		<img src="cookieimages/chocolatechip.png" alt="photo of chocolate chip cookes" height="150">
 		<p><a href="cookierecipes/chocolatechip.html">Chocolate Chip Cookies</a>: A classic&comma; can't go wrong with these.</p> 
 		
-		<img src="cookieimages/macarons.png" alt="photo of macarons" height="150px">
+		<img src="cookieimages/macarons.png" alt="photo of macarons" height="150">
 		<p><a href="https://tasty.co/recipe/macarons">Macarons</a></p>
 
 		<h2 id="healthy">Healthy Choice Cookies</h2>
 		<p>Healthy and delicious. These recipes are great and some more must-tries. They are from Wellplated and Cookie and Kate; links lead to their website.</p>
 		
-		<img src="cookieimages/oatmeal.png" alt="photo of healthy oatmeal cookies" height="150px">
+		<img src="cookieimages/oatmeal.png" alt="photo of healthy oatmeal cookies" height="150">
 		<p><a href="https://www.wellplated.com/healthy-oatmeal-cookies/">Wellplated: Healthy Oatmeal Cookies</a></p>
 		
-		<img src="cookieimages/pumpkin.png" alt="photo of whole wheat pumpking cookies" height="150px">
+		<img src="cookieimages/pumpkin.png" alt="photo of whole wheat pumpking cookies" height="150">
 		<p><a href="https://cookieandkate.com/pumpkin-cookie-recipe/">Cookie and Kate: Whole Wheat Pumpkin Cookies</a></p>
 
 		<h2 id="holiday">Holiday Cookies</h2>
 		<p>As the holiday comes&comma; so does the time of giving and sharing. These cookies are perfect for a holiday snack with your family or a gift to your closest friends.</p>
 		
-		<img src="cookieimages/gingerbread.png" alt="photo of gingerbread cookies" height="150px">
+		<img src="cookieimages/gingerbread.png" alt="photo of gingerbread cookies" height="150">
 		<p><a href="cookierecipes/gingerbread.html">Gingerbread Cookies</a>: Fun to decorate and even more fun to eat. </p>
 		
-		<img src="cookieimages/pinwheels.png" alt="photo of raspberry pinwheels" height="150px">
+		<img src="cookieimages/pinwheels.png" alt="photo of raspberry pinwheels" height="150">
 		<p><a href="cookierecipes/pinwheels.html">Mini Raspberry Pinwheels</a>: The jam goes perfectly with the pastry.</p>
 
 		<p id="credits">
