--- a/cookierecipes/pinwheels.html
+++ b/cookierecipes/pinwheels.html
@@ -74,5 +74,9 @@
 			<li>Cut rolls into slices and place on cookie sheet.</li>
 			<li>Bake for 10 to 12 minutes.</li>
 		</ol>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/cookierecipes/pinwheels.html">
+			<img src="../w3c.png" width="100" alt="HTML5 Validator">
+		</a>
 	</body>
 </html>
