--- a/cookierecipes/mixednut.html
+++ b/cookierecipes/mixednut.html
@@ -68,6 +68,10 @@
 		</ol>
 
 		<p>*NOTE: this cookie's cookie dough will keep up to 5 days in the refrigerator.</p>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/cookierecipes/mixednut.html">
+			<img src="../w3c.png" width="100" alt="HTML5 Validator">
+		</a>
 
 	</body>
 </html>
