--- a/cookierecipes/gingerbread.html
+++ b/cookierecipes/gingerbread.html
@@ -89,5 +89,9 @@
 			<li>Lightly flour a board and sprinkle it with sugar. Roll dough. Shape cookies with a cookie cutter and transfer to a cookie sheet.</li>
 			<li>Bake for 12 to 15 minutes.</li>
 		</ol>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/cookierecipes/gingerbread.html">
+			<img src="../w3c.png" width="100" alt="HTML5 Validator">
+		</a>
 	</body>
 </html>
