--- a/cookierecipes/cocoabuttons.html
+++ b/cookierecipes/cocoabuttons.html
@@ -63,5 +63,9 @@
 		</ol>
 
 		<p>*NOTE: make sure to store the cookies in an airtight container.</p>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/cookierecipes/cocoabuttons.html">
+			<img src="../w3c.png" width="100" alt="HTML5 Validator">
+		</a>
 	</body>
 </html>
