--- a/cookierecipes/chocolatechip.html
+++ b/cookierecipes/chocolatechip.html
@@ -73,5 +73,9 @@
 			<li>Preheat the oven to 375 degrees fahrenheit. Grease and flour a cookie sheet.</li>
 			<li>Drop small spoonfuls of batter onto the cookie sheet and bake for 10 minutes.</li>
 		</ol>
+		
+		<a href="http://validator.w3.org/check?uri=https://vivpeng.github.io/home/cookierecipes/chocolatechip.html">
+			<img src="../w3c.png" width="100" alt="HTML5 Validator">
+		</a>
 	</body>
 </html>
