--- a/cookierecipes.html
+++ b/cookierecipes.html
@@ -53,7 +53,7 @@
 		<p><a href="cookierecipes/chocolatechip.html">Chocolate Chip Cookies</a>: A classic&comma; can't go wrong with these.</p> 
 		
 		<img src="cookieimages/macarons.png" alt="photo of macarons" height="150">
-		<p><a href="https://tasty.co/recipe/macarons">Macarons</a></p>
+		<p><a href="https://tasty.co/recipe/macarons">Tasty: Macarons</a></p>
 
 		<h2 id="healthy">Healthy Choice Cookies</h2>
 		<p>Healthy and delicious. These recipes are great and some more must-tries. They are from Wellplated and Cookie and Kate; links lead to their website.</p>
